# MyEngine

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/includes/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp  Window.hpp
Core/src/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp
Core/src/Modules/: UIModule.cpp  UIModule.hpp
Core/src/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Editor/: CMakeLists.txt  main.cpp
